// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/nvm/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "depName": "node",
    "purl": "pkg:github/nodejs/node",
  },
]
`;

exports[`lib/manager/nvm/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "depName": "node",
    "purl": "pkg:github/nodejs/node",
    "skipReason": "unsupported-version",
  },
]
`;

exports[`lib/manager/nvm/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "depName": "node",
    "purl": "pkg:github/nodejs/node",
  },
]
`;
